
	* scripts/dpkg-distaddfile.pl, scripts/dpkg-gencontrol.pl: Delete
	the chown(getfowner(), ...) on new files. It doesn't seem to do
	anything useful anymore as it got dropped from several other
	scripts over the years without problems.

	* scripts/dpkg-source.pl: Integrate readmd5sum from controllib here
	as it's the only user of that function.

2007-12-28  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/ErrorHandling.pm (syntaxerr): New function to
	replace the syntax() function in controllib.pl.

2007-12-28  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg.pm: Add a warning to avoid adding unnecessary stuff
	in that module.

2007-12-27  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg.pm (%EXPORT_TAGS, @EXPORT_OK): Remove.
	(@comp_supported, %comp_supported, %comp_ext, $comp_regex): Move
	variables ...
	* scripts/Dpkg/Compression.pm: ... here. New file.
	* scripts/dpkg-genchanges.pl: Use new module Dpkg::Compression
	instead of tag from Dpkg.
	* scripts/dpkg-source.pl: Likewise
	* scripts/Makefile.am (nobase_dist_perllib_DATA): Add
	'Dpkg/Compression.pm'.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm: Blacklist some armel specific
	symbols (__exidx_end, __exidx_start).

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* Makefile.am: Add some missing files in EXTRA_DIST. And add a
	dist-hook rule to check that all files contained in the git
	repository (except .gitignore) are included in the dist tarball.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* configure.ac: Bump version to 1.14.15~.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* configure.ac: Release 1.14.14.

2007-12-27  Raphael Hertzog  <hertzog@debian.org>

	* debian/control: Bump dpkg dependency to >= 1.14.13 in dpkg-dev
	as dpkg-source needs the latest Dpkg.pm.
	* debian/control: Add libio-string-perl to Build-Depends as it's
	needed for a non-regression test (200_Dpkg_Shlibs.t).