@@ -55,6 +55,10 @@
 	* scripts/dpkg-source.pl: Integrate readmd5sum from controllib here
 	as it's the only user of that function.
 
+	* scripts/controllib.pl: Get rid of everything except
+	parsechangelog and its dependencies (parsecdata, syntax) that are
+	still needed.
+
 2007-12-28  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/ErrorHandling.pm (syntaxerr): New function to
